--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
             <li>Tableau</li>
             <li>Moveit</li>
         </ul>
-        <img src="../3.3 Image Elements/20190701_145037.jpg" alt="My airport image" height="100" />
+        <img src="./Contactme/20190701_145037.jpg" alt="My airport image" height="150" /><hr />
 
+        <a href="./hobbies/index.html"><h3>My Hobbies</h3></a>
+        <a href="./Contactme/index.html"><h3>Contact me</h3></a>
+        <footer>
+            <p>@Shaik bahadur<br />pleasure work with you</p>
+        </footer>
     </body>
     
 </html>
